# cmake

control_option/: CMakeLists.txt
control_option/src/: CMakeLists.txt
share_and_static/: CMakeLists.txt
share_and_static/src/: main.c
test1/: CMakeLists.txt
test1/src/: CMakeLists.txt  main.c  testfunc.c  testfunc1.c
